# EPML_DS_COOCKIECUTTER

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  Makefile  README.MD  docker-compose.yaml  dockerfile  pyproject.toml
