[project]
name = "wine-quality"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Polyakov",email = "leftgoga@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit (>=4.4.0,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
extra_checks = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E", "W", "F",
  "I",
  "B",
  "C4",
  "UP",
  "ARG",
  "PIE",
  "PL",
  "RUF",
]
ignore = [
  "E501",
  "B008",
  "PLR0913",
  "PLR2004",
  "RUF001",
   "RUF002",
   "RUF003"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["wine_quality"]
